Fix mobile overlay: remove semi-transparent background and adjust spacing on homepage

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -396,7 +396,8 @@
         padding: 130px 30px 40px 30px;
     }
     .introduction .inner {
-        background: url(../images/black-transparent.png) repeat
+        background: none;
+        padding-top: 150px !important;
     }
     .introduction h2 {
         font-size: 35px;
